style: Fix overflows

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,7 @@ body {
   font-family: "Roboto";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 * {
